--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -8,53 +8,65 @@ class Globals {
 }
 
 pipeline {
-    agent { label 'ec2builder'}
+    agent { label 'ec2builder' }
 
-    options{
+    options {
         buildDiscarder(logRotator(numToKeepStr: '35', artifactNumToKeepStr: '35'))
     }
     environment {
-        /// Input parameters
-        //Enable docker cache parameter
-        param_enable_docker_cache = "${params.EnableDockerCache}"
-        //Build major version release and optionally push it to public repositories
-        param_stable_release = "${params.StableRelease}"
-        //Release version to tag all artifacts to
-        param_release_version = "${params.ReleaseVersion}"
+        /*
+        Job parameters
+        */
+        pathToCharts = "${WORKSPACE}/helms"
+        sharedLibPath = "legion-cicd/pipelines/legionPipeline.groovy"
         //Git Branch to build package from
         param_git_branch = "${params.GitBranch}"
-        //Legion cicd repo url (for pipeline methods import)
-        param_legion_cicd_repo = "${params.LegionCicdRepo}"
-        //Legion repo version tag (tag or branch name)
-        param_legion_cicd_branch = "${params.LegionCicdBranch}"
-        //Legion Infra repo url (for pipeline methods import)
-        param_legion_infra_repo = "${params.LegionInfraRepo}"
-        //Legion repo version tag (tag or branch name)
-        param_legion_infra_version_tag = "${params.LegionInfraVersionTag}"
+
+        /*
+        Release parameters
+        */
+        //Set next releases version explicitly
+        param_next_version = "${params.NextVersion}"
+        //Release version to tag all artifacts to
+        param_release_version = "${params.ReleaseVersion}"
         //Push release git tag
         param_push_git_tag = "${params.PushGitTag}"
         //Rewrite git tag i exists
         param_force_tag_push = "${params.ForceTagPush}"
-        //Push release to master bransh
-        param_update_master = "${params.UpdateMaster}"
-        //Set next releases version explicitly
-        param_next_version = "${params.NextVersion}"
-        // Update version string
         param_update_version_string = "${params.UpdateVersionString}"
-        // Release version to be used as docker cache source
-        param_docker_cache_source = "${params.DockerCacheSource}"
-        //Artifacts storage parameters
+        param_update_master = "${params.UpdateMaster}"
+        //Build major version release and optionally push it to public repositories
+        param_stable_release = "${params.StableRelease}"
+
+        /*
+        CICD repository
+        */
+        legionCicdGitlabKey = "${params.legionCicdGitlabKey}"
+        param_git_deploy_key = "${params.GitDeployKey}"
+        //Legion CICD repo url (for pipeline methods import)
+        param_legion_cicd_repo = "${params.LegionCicdRepo}"
+        //Legion repo branch (tag or branch name)
+        param_legion_cicd_branch = "${params.LegionCicdBranch}"
+
+        /*
+        Helm
+        */
         param_helm_repo_git_url = "${params.HelmRepoGitUrl}"
         param_helm_repo_git_branch = "${params.HelmRepoGitBranch}"
         param_helm_repository = "${params.HelmRepository}"
+
+        /*
+        Docker
+        */
+        param_dockerhub_publishing_enabled = "${params.DockerHubPublishingEnabled}"
         param_docker_registry = "${params.DockerRegistry}"
         param_docker_hub_registry = "${params.DockerHubRegistry}"
-        param_git_deploy_key = "${params.GitDeployKey}"
-        ///Job parameters
-        sharedLibPath = "legion-cicd/pipelines/legionPipeline.groovy"
-        pathToCharts= "${WORKSPACE}/helms"
+        param_enable_docker_cache = "${params.EnableDockerCache}"
+        param_docker_cache_source = "${params.DockerCacheSource}"
 
-        // PyPi
+        /*
+        PyPi
+        */
         param_pypi_public_url = "${params.PyPiPublicUrl}"
         param_pypi_public_creds = "pypi_public_cred"
         param_pypi_private_url = "${params.PyPiPrivateUrl}"
@@ -67,8 +79,6 @@ pipeline {
         param_npm_private_url = "${params.NpmPrivateUrl}"
         param_npm_private_creds = "nexus-local-repository"
         param_npm_publishing_enabled = "${NpmPublishingEnabled}"
-
-        param_dockerhub_publishing_enabled = "${params.DockerHubPublishingEnabled}"
     }
 
     stages {
@@ -81,8 +91,8 @@ pipeline {
 
                     // import Legion components
                     sshagent(["${env.legionCicdGitlabKey}"]) {
-                        print ("Checkout Legion-cicd repo")
-                        sh"""#!/bin/bash -ex
+                        print("Checkout Legion-cicd repo")
+                        sh """#!/bin/bash -ex
                         mkdir -p \$(getent passwd \$(whoami) | cut -d: -f6)/.ssh && ssh-keyscan git.epam.com >> \$(getent passwd \$(whoami) | cut -d: -f6)/.ssh/known_hosts
                         if [ ! -d "legion-cicd" ]; then
                             git clone ${env.param_legion_cicd_repo} legion-cicd
@@ -90,29 +100,15 @@ pipeline {
                         cd legion-cicd && git checkout ${env.param_legion_cicd_branch}
                         """
 
-                        print ("Load legion pipeline common library")
+                        print("Load legion pipeline common library")
                         cicdLibrary = load "${env.sharedLibPath}"
                     }
 
                     verFiles = [
                             "odahuflow/jupyterlab/version.py",
+                            "package.json",
                     ]
                     cicdLibrary.setBuildMeta(verFiles)
-                }
-            }
-        }
-
-        // Set Git Tag in case of stable release
-        stage('Set GIT release Tag'){
-            steps {
-                script {
-                    print (env.param_stable_release)
-                    if (env.param_stable_release.toBoolean() && env.param_push_git_tag.toBoolean()){
-                        cicdLibrary.setGitReleaseTag("${env.param_git_deploy_key}")
-                    }
-                    else {
-                        print("Skipping release git tag push")
-                    }
                 }
             }
         }
@@ -120,11 +116,12 @@ pipeline {
         stage("Build Docker images & Run Tests") {
             steps {
                 script {
-                    cicdLibrary.buildLegionImage('odahu-flow-jupyterlab', '.', 'containers/jupyterlab/Dockerfile')
+                    cicdLibrary.buildDockerImage('odahu-flow-jupyterlab', '.', 'containers/jupyterlab/Dockerfile')
                 }
             }
         }
-        stage('Upload artifacts'){
+
+        stage('Upload artifacts') {
             parallel {
                 stage("Upload PyPi Legion packages") {
                     steps {
@@ -147,38 +144,25 @@ pipeline {
                         }
                     }
                 }
-                stage("Upload Jupyterlab Docker image"){
+                stage("Upload Jupyterlab Docker image") {
                     steps {
                         script {
-                            cicdLibrary.uploadDockerImage('odahu-flow-jupyterlab', env.param_stable_release.toBoolean()  && env.param_dockerhub_publishing_enabled.toBoolean())
+                            cicdLibrary.uploadDockerImage('odahu-flow-jupyterlab', env.param_stable_release.toBoolean() && env.param_dockerhub_publishing_enabled.toBoolean())
                         }
                     }
                 }
             }
         }
 
-        stage("Update Legion version string") {
+        stage("Update branch") {
             steps {
                 script {
-                    if (env.param_stable_release.toBoolean() && env.param_update_version_string.toBoolean()) {
-                        cicdLibrary.updateVersionString('odahuflow/jupyterlab/version.py')
-                    }
-                    else {
-                        print("Skipping version string update")
-                    }
-                }
-            }
-        }
-
-        stage('Update Master branch'){
-            steps {
-                script {
-                    if (env.param_update_master.toBoolean()){
-                        cicdLibrary.updateMasterBranch()
-                    }
-                    else {
-                        print("Skipping Master branch update")
-                    }
+                    cicdLibrary.updateReleaseBranches(
+                            env.param_stable_release.toBoolean(),
+                            env.param_push_git_tag.toBoolean(),
+                            env.param_update_version_string.toBoolean(),
+                            env.param_update_master.toBoolean(),
+                            env.param_git_deploy_key)
                 }
             }
         }
