--- a/package.json
+++ b/package.json
@@ -1,37 +1,7 @@
 {
-  "name": "odahu-flow-jupyterlab-plugin",
-  "version": "1.0.0",
-  "description": "Integration with Legion Platform (Cluster mode only)",
-  "keywords": [
-    "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/odahu/odahu-flow-jupyterlab-plugin.git"
-  },
+  "author": "Vlad Tokarev, Vitalik Solodilov",
   "bugs": {
     "url": "https://github.com/odahu/odahu-flow-jupyterlab-plugin/issues"
-  },
-  "homepage": "https://github.com/odahu/odahu-flow-jupyterlab-plugin",
-  "license": "Apache-2.0",
-  "author": "Vlad Tokarev, Vitalik Solodilov",
-  "files": [
-    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
-    "schema/*.json"
-  ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "scripts": {
-    "build": "tsc --build tsconfig.json",
-    "clean": "rimraf lib",
-    "prepublish": "npm run build",
-    "watch": "tsc -w",
-    "test": "jest",
-    "lint": "tslint --project .",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "dependencies": {
     "@jupyterlab/application": "^1.1.0",
@@ -50,6 +20,7 @@
     "react-toggle-display": "^2.2.0",
     "typestyle": "^2.0.1"
   },
+  "description": "Integration with Odahu Platform",
   "devDependencies": {
     "@types/enzyme": "3.1.15",
     "@types/jest": "^24",
@@ -70,33 +41,62 @@
     "typescript": "~3.5.1",
     "typescript-tslint-plugin": "0.5.5"
   },
-  "jupyterlab": {
-    "extension": true,
-    "discovery": {
-      "server": {
-        "managers": [
-          "pip"
-        ],
-        "base": {
-          "name": "jupyter_odahuflow"
-        }
-      }
-    }
-  },
+  "files": [
+    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
+    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
+    "schema/*.json"
+  ],
+  "homepage": "https://github.com/odahu/odahu-flow-jupyterlab-plugin",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
+  "jupyterlab": {
+    "discovery": {
+      "server": {
+        "base": {
+          "name": "jupyter_odahuflow"
+        },
+        "managers": [
+          "pip"
+        ]
+      }
+    },
+    "extension": true
+  },
+  "keywords": [
+    "jupyter",
+    "jupyterlab",
+    "jupyterlab-extension"
+  ],
+  "license": "Apache-2.0",
   "lint-staged": {
     "*.{ts,tsx}": [
       "tslint --fix"
     ]
   },
+  "main": "lib/index.js",
+  "name": "odahu-flow-jupyterlab-plugin",
   "prettier": {
     "singleQuote": true
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/odahu/odahu-flow-jupyterlab-plugin.git"
+  },
   "resolutions": {
     "@types/react": "~16.8.4"
-  }
+  },
+  "scripts": {
+    "build": "tsc --build tsconfig.json",
+    "clean": "rimraf lib",
+    "lint": "tslint --project .",
+    "prepublish": "npm run build",
+    "test": "jest",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "watch": "tsc -w"
+  },
+  "types": "lib/index.d.ts",
+  "version": "1.0.0-rc32"
 }
