--- a/.pylintrc
+++ b/.pylintrc
@@ -38,3 +38,6 @@ disable=R1720,W1202,C0330,R1710,R0201,R0913,R1705,W0603,W1201,W0212,W0107,C0103,
 good-names=blueprint,id
 ignored-modules=responses,distutils,distutils.dir_util
 ignored-argument-names=kwargs|args|_
+
+[TYPECHECK]
+ignored-modules = pydantic
