--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -17,7 +17,6 @@ pipeline {
         /*
         Job parameters
         */
-        pathToCharts = "${WORKSPACE}/helms"
         sharedLibPath = "legion-cicd/pipelines/legionPipeline.groovy"
         //Git Branch to build package from
         param_git_branch = "${params.GitBranch}"
@@ -31,7 +30,7 @@ pipeline {
         param_release_version = "${params.ReleaseVersion}"
         //Push release git tag
         param_push_git_tag = "${params.PushGitTag}"
-        //Rewrite git tag i exists
+        //Rewrite git tag if exists
         param_force_tag_push = "${params.ForceTagPush}"
         param_update_version_string = "${params.UpdateVersionString}"
         param_update_master = "${params.UpdateMaster}"
@@ -39,21 +38,14 @@ pipeline {
         param_stable_release = "${params.StableRelease}"
 
         /*
-        CICD repository
+        CI/CD repository
         */
         legionCicdGitlabKey = "${params.legionCicdGitlabKey}"
         param_git_deploy_key = "${params.GitDeployKey}"
-        //Legion CICD repo url (for pipeline methods import)
+        //CI/CD repo url (for pipeline methods import)
         param_legion_cicd_repo = "${params.LegionCicdRepo}"
         //Legion repo branch (tag or branch name)
         param_legion_cicd_branch = "${params.LegionCicdBranch}"
-
-        /*
-        Helm
-        */
-        param_helm_repo_git_url = "${params.HelmRepoGitUrl}"
-        param_helm_repo_git_branch = "${params.HelmRepoGitBranch}"
-        param_helm_repository = "${params.HelmRepository}"
 
         /*
         Docker
@@ -87,11 +79,9 @@ pipeline {
                 cleanWs()
                 checkout scm
                 script {
-                    sh 'echo RunningOn: $(curl http://checkip.amazonaws.com/)'
-
-                    // import Legion components
+                    // import CI/CD components
                     sshagent(["${env.legionCicdGitlabKey}"]) {
-                        print("Checkout Legion-cicd repo")
+                        print("Checkout CI/CD repo")
                         sh """#!/bin/bash -ex
                         mkdir -p \$(getent passwd \$(whoami) | cut -d: -f6)/.ssh && ssh-keyscan git.epam.com >> \$(getent passwd \$(whoami) | cut -d: -f6)/.ssh/known_hosts
                         if [ ! -d "legion-cicd" ]; then
@@ -100,7 +90,7 @@ pipeline {
                         cd legion-cicd && git checkout ${env.param_legion_cicd_branch}
                         """
 
-                        print("Load legion pipeline common library")
+                        print("Load common CI/CD pipeline library")
                         cicdLibrary = load "${env.sharedLibPath}"
                     }
 
@@ -113,43 +103,69 @@ pipeline {
             }
         }
 
-        stage("Build Docker images & Run Tests") {
-            steps {
-                script {
-                    cicdLibrary.buildDockerImage('odahu-flow-jupyterlab', '.', 'containers/jupyterlab/Dockerfile')
-                }
-            }
-        }
-
         stage('Upload artifacts') {
             parallel {
-                stage("Upload PyPi Legion packages") {
+                stage("Upload ODAHU PyPi packages") {
                     steps {
                         script {
                             cicdLibrary.publishPythonPackage("./", env.param_pypi_private_creds, env.param_pypi_private_url, env.param_pypi_publishing_enabled, env.param_pypi_public_creds, env.param_pypi_public_url)
                         }
                     }
                 }
-                stage('Upload NPM Legion packages') {
+                stage('Upload ODAHU NPM packages') {
                     steps {
                         script {
                             cicdLibrary.publishNpmPackage("./", env.param_npm_private_creds, env.param_npm_private_url, env.param_npm_publishing_enabled, env.param_npm_public_creds, env.param_npm_public_url)
                         }
                     }
                 }
-                stage('Package and upload helm charts') {
-                    steps {
-                        script {
-                            cicdLibrary.uploadHelmCharts(env.pathToCharts)
-                        }
-                    }
+            }
+        }
+
+        stage("Build Docker images for notebooks") {
+            steps {
+                script {
+                    def buildArgs = """--build-arg NPM_EXTRA_INDEX_URL=https://${env.param_npm_private_url}
+                                       --build-arg ODAHU_PLUGIN_VERSION=${Globals.buildVersion}
+                                    """.replaceAll("\\s+"," ")
+
+                    cicdLibrary.buildDockerImage(
+                        'base-notebook',
+                        '.',
+                        'containers/jupyter-stacks/Dockerfile',
+                        "${buildArgs} --build-arg NOTEBOOK_TYPE=base"
+                    )
+                    cicdLibrary.buildDockerImage(
+                        'datascience-notebook',
+                        '.',
+                        'containers/jupyter-stacks/Dockerfile',
+                        "${buildArgs} --build-arg NOTEBOOK_TYPE=datascience"
+                    )
+                    cicdLibrary.buildDockerImage(
+                        'tensorflow-notebook',
+                        '.',
+                        'containers/jupyter-stacks/Dockerfile',
+                        "${buildArgs} --build-arg NOTEBOOK_TYPE=tensorflow"
+                    )
                 }
-                stage("Upload Jupyterlab Docker image") {
-                    steps {
-                        script {
-                            cicdLibrary.uploadDockerImage('odahu-flow-jupyterlab', env.param_stable_release.toBoolean() && env.param_dockerhub_publishing_enabled.toBoolean())
-                        }
-                    }
+            }
+        }
+
+        stage("Upload built Docker images to registry") {
+            steps {
+                script {
+                    cicdLibrary.uploadDockerImage(
+                        'base-notebook',
+                        env.param_stable_release.toBoolean() && env.param_dockerhub_publishing_enabled.toBoolean()
+                    )
+                    cicdLibrary.uploadDockerImage(
+                        'datascience-notebook',
+                        env.param_stable_release.toBoolean() && env.param_dockerhub_publishing_enabled.toBoolean()
+                    )
+                    cicdLibrary.uploadDockerImage(
+                        'tensorflow-notebook',
+                        env.param_stable_release.toBoolean() && env.param_dockerhub_publishing_enabled.toBoolean()
+                    )
                 }
             }
         }
