--- a/containers/jupyter-stacks/Dockerfile
+++ b/containers/jupyter-stacks/Dockerfile
@@ -5,7 +5,7 @@ FROM jupyter/${NOTEBOOK_TYPE}-notebook:${NOTEBOOK_TAG}
 
 ARG JUPYTERLAB_VERSION=1.2.3
 ARG ODAHU_PLUGIN_NAME=odahu-flow-jupyterlab-plugin
-ARG ODAHU_PLUGIN_VERSION=1.0.0-rc35
+ARG ODAHU_PLUGIN_VERSION
 ARG PIP_EXTRA_INDEX_URL
 ARG NPM_EXTRA_INDEX_URL=https://registry.npmjs.org/
 
