[#331] Install cloud CLI tools to images

--- a/containers/jupyter-stacks/Dockerfile
+++ b/containers/jupyter-stacks/Dockerfile
@@ -4,6 +4,9 @@ ARG NOTEBOOK_TYPE=base
 FROM jupyter/${NOTEBOOK_TYPE}-notebook:${NOTEBOOK_TAG}
 
 ARG JUPYTERLAB_VERSION=1.2.3
+ARG AWS_CLI_VERSION=2.0.57
+ARG GCLOUD_CLI_VERSION=314.0.0-0
+ARG AZURE_CLI_VERSION=2.0.81+ds-4ubuntu0.2
 ARG ODAHU_PLUGIN_NAME=odahu-flow-jupyterlab-plugin
 ARG ODAHU_PLUGIN_VERSION
 ARG PIP_EXTRA_INDEX_URL
@@ -13,9 +16,19 @@ SHELL ["/bin/bash", "-c"]
 
 USER root
 
-RUN apt-get update && apt-get install -y git && \
-    rm -rf /var/lib/apt/lists/* \
-    && \
+
+RUN apt-get update && apt-get install -y git unzip groff less curl apt-transport-https ca-certificates lsb-release gnupg && \
+    curl -sL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | tee /etc/apt/trusted.gpg.d/microsoft.gpg > /dev/null && \
+    echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/azure-cli.list && \
+    echo "deb https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add - && \
+    apt-get update && \
+    apt-get install -y google-cloud-sdk=${GCLOUD_CLI_VERSION} azure-cli=${AZURE_CLI_VERSION} && \
+    rm -rf /var/lib/apt/lists/* && \
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-${AWS_CLI_VERSION}.zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install && \
+    rm awscliv2.zip && \
     pip install --no-cache-dir \
     jupyterlab==${JUPYTERLAB_VERSION} \
     jupytext==1.1.7 \
