[#331] set valid azure-cli version

--- a/containers/jupyter-stacks/Dockerfile
+++ b/containers/jupyter-stacks/Dockerfile
@@ -6,7 +6,7 @@ FROM jupyter/${NOTEBOOK_TYPE}-notebook:${NOTEBOOK_TAG}
 ARG JUPYTERLAB_VERSION=1.2.3
 ARG AWS_CLI_VERSION=2.0.57
 ARG GCLOUD_CLI_VERSION=314.0.0-0
-ARG AZURE_CLI_VERSION=2.0.81+ds-4ubuntu0.2
+ARG AZURE_CLI_VERSION=2.13.0-1~focal
 ARG ODAHU_PLUGIN_NAME=odahu-flow-jupyterlab-plugin
 ARG ODAHU_PLUGIN_VERSION
 ARG PIP_EXTRA_INDEX_URL
